# c89-compiler

./: Cargo.toml  README.md  build.rs  run.py  test.py
.ci/: mars.sh
.github/workflows/: rust.yml
comp/: Cargo.toml
comp/src/: cli.rs  compile.rs  main.rs  report.rs  util.rs
comp_lib/: Cargo.toml  build.rs
comp_lib/grammar/: CLexer.g4  CParser.g4  Expr.g4  Statement.g4  Type.g4
comp_lib/src/: compile.rs  diagnostic.rs  lib.rs  parser.rs  settings.rs  util.rs
comp_lib/tests/: parse.rs
examples/test_files/: arrays.c  casts.c  const_propagation.c  for_statements.c  global_str.c  if_statements.c  inc_dec.c  operators.c  operators_ncf.c  pointer_arith.c  pointers.c  simple_main.c  switch_statements.c  variables.c
llvm_ir/: Cargo.toml
llvm_ir/src/: fmt_as_llvm_asm.rs  function.rs  global_var.rs  id.rs  id_store.rs  instruction.rs  lib.rs  macros.rs  (+3 more)
mips_ir/: Cargo.toml
src/: ast.rs  ctype.rs  diagnostic.rs  lib.rs  main.rs  parser.rs  passes.rs
test_expected/: assignments.dot  assignments.ll  casts.dot  casts.ll  comments.dot  comments.ll  const_propagation.dot  const_propagation.ll  declarations.dot  declarations.ll  expressions.dot  expressions.ll  inc_dec.dot  inc_dec.ll  operators.dot  operators.ll  pointer_arith.dot  pointer_arith.ll  pointers.dot  pointers.ll  relation_ops.dot  relation_ops.ll  shortcircuiting.dot  shortcircuiting.ll  variables.ll
test_inputs/: assignments.c  casts.c  comments.c  const_propagation.c  inc_dec.c  operators.c  pointer_arith.c  pointers.c  relation_ops.c  shortcircuiting.c  variables.c
tests/: Cargo.toml  build.rs
(+412 files in other folders)
