[package]
name = "comp"
version = "0.1.0"
edition = "2021"

[dependencies]
comp_lib = { path = "../comp_lib" }
anyhow = "1.0.69"
clap = { version = "4.2", features = ["derive"] }
codespan-reporting = "0.11.1"
is-terminal = "0.4"

[dev-dependencies]
# Only here so that the tests crate tests are run when this crates tests are run
tests = { path = "../tests" }
